syntax = "proto3";

option java_multiple_files = true;

package FulfillmentService;


message Order{
  int64 id = 1;
  string location = 2;
  string orderStatus = 3;
  int64 deliveryPersonId = 4;
}

message AssignedOrderRequest {
  Order order = 1;
}

message AssignedOrderResponse{
  Order order = 1;
}

message DeliveryPerson{
  int64 id = 1;
  string name = 2;
  bool availablity = 3;
  string location = 4;
  repeated Order orders = 5;
}

message UpdateStatusRequest{
  int64 deliveryPersonId = 1;
  int64 orderId = 2;
  string orderStatus = 3;
}

message UpdateStatusResponse{
  Order order = 1;
}

service fulfillment{
  rpc AssignedOrder(AssignedOrderRequest) returns (AssignedOrderResponse);
  rpc UpdateStatus(UpdateStatusRequest) returns (UpdateStatusResponse);
}

// protoc -Iproto --go_out=.  --go_opt=module=fulfillmentService --go-grpc_out=. --go-grpc_opt=module=fulfillmentService proto/fulfillment.proto
